# telegram_channel_parser

./: .dockerignore  .env.dev  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
telegram_channel_parser/: __main__.py  parser.py
